--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="C:/Users/盛揚/Downloads/作業/java/SoftwareStudio_Assignment6/Libraries/Processing/core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
