--- a/Libraries/Minim/.project
+++ b/Libraries/Minim/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SoftwareStudioAssignment6</name>
+	<name>Minim</name>
 	<comment></comment>
 	<projects>
 	</projects>
